[tool.poetry]
name = "kg-bioportal"
version = "0.1.0"
description = "Bioportal, as a Knowledge Graph."
authors = ["caufieldjh <j.harry.caufield@gmail.com>"]
license = "BSD-3"
readme = "README.md"
packages = [{include = "kg_bioportal"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
cat-merge = "^0.1.18"
click = "8.0.4"
compress-json = "^1.0.8"
kghub-downloader = "^0.3.3"
kgx = "^1.7.2"
networkx = "^2.8.8"
pandas = "^1.5.2"
plotly = "^5.11.0"
PyYAML = "^6.0"
recommonmark = "^0.7.1"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
tqdm = "^4.64.1"
wget = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
codacy-coverage = "^1.3.11"
parameterized = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
