[tool.poetry]
name = "kg-bioportal"
version = "0.2.0"
description = "Bioportal ontologies as KGX graphs."
authors = ["caufieldjh <j.harry.caufield@gmail.com>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
kgx = "^2.4.2"
click = "^8.0.4"
kghub-downloader = "^0.3.9"
requests = "^2.32.3"
sh = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
setuptools = "^72.2.0"
tox = "^4.18.0"

[tool.poetry.scripts]
kgbioportal = "kg_bioportal.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
